Fix Slider-Alignment auf grossen Screens (>1440px)
Padding-Formel calc((100vw - 1200px) / 2) wurde fuer grosse Screens
mit festen 120px ueberschrieben, damit Content korrekt innerhalb des
1440px-Containers ausgerichtet ist. Scroll-Track geht rechts bis zum
Container-Rand und wird dort abgeschnitten.

--- a/blocks/klassen-slider/style.css
+++ b/blocks/klassen-slider/style.css
@@ -26,6 +26,18 @@ body.po-no-scroll {
 		margin-right: auto;
 		overflow: hidden;
 	}
+	.po-klassen-slider__headline {
+		padding: 0 120px;
+	}
+	.po-klassen-slider__filters {
+		padding: 0 120px;
+	}
+	.po-klassen-slider__track {
+		padding: 0 0 0 120px;
+	}
+	.po-klassen-slider__nav {
+		padding: 0 120px;
+	}
 }
 
 .po-klassen-slider__headline {
